--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <!-- script -->
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+    <script src="js/swiper.min.js"></script>
     <script src="js/lightgallery-all.min.js"></script>
     <script src="js/script.js"></script>
     <script>
